# twill

./: .gitignore
twill-api/: .env.dev  Dockerfile  alembic.ini  celery.py  celery_config.py  docker-compose.yml  pyproject.toml
twill-api/app/: config.py  main.py
twill-api/app/model/: security.py  session.py  tweet.py  user.py
twill-api/app/router/: authentication.py  beta.py  twitter_authentication.py
twill-api/app/service/: authentication.py  deps.py  session.py
twill-api/app/service/starsessions/: middleware.py  session.py
twill-api/app/service/starsessions/backends/: cookie.py  memory.py  redis.py
twill-api/migrations/: env.py
twill-api/migrations/versions/: a0ad657a35b2_added_created_at_to_user.py
twill-api/tasks/: example_tasks.py
twill-core/: README.md  pyproject.toml  requirements.txt
twill-core/twill/: config.py
twill-core/twill/airplane/: daily_sync.py  daily_sync.task.yaml
twill-core/twill/database/: mongo.py
twill-core/twill/model/: general.py  twitter.py  user.py
twill-core/twill/service/: analytics.py
twill-frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
twill-frontend/src/hooks/: index.js
twill-frontend/src/lib/: ExampleBarChart.svelte  LoginButton.svelte  Navbar.svelte  ProfileMenu.svelte  SignIn.svelte  SignInForm.svelte  Stats.svelte  TimezoneSelector.svelte  TwitterStats.svelte  actions.js  api.js  config.js  routes.js  store.js
twill-frontend/src/routes/: __layout.svelte  _respond.js  dashboard.svelte  index.svelte  onboarding.svelte
twill-frontend/src/routes/auth/: login.js  logout.js  logout.svelte  oauth.js  oauth.svelte
twill-ml/: pyproject.toml
twill-ml/nbs/: topic-modeling.ipynb
twill-ml/twill_ml/: __init__.py  config.py  dataloader.py  twitter_topic_model.py  utils.py
twill-nuxt/: Dockerfile  api.ts  nuxt.config.ts  package.json  routes.ts  tsconfig.json
twill-nuxt/components/: ErrorBanner.vue  ErrorHandler.vue
twill-nuxt/components/banner/: error.vue  handler.vue  info.vue  success.vue
twill-nuxt/composables/: useResponse.ts
twill-nuxt/layouts/: default.vue
twill-nuxt/middleware/: auth.ts
twill-nuxt/models/: api.ts  auth.ts  error.ts
twill-nuxt/pages/: index.vue
twill-nuxt/pages/beta/signup/: index.vue
twill-nuxt/pages/oauth/: index.vue
twill-nuxt/pages/settings/: index.vue
twill-nuxt/server/api/auth/login/: index.get.ts
twill-nuxt/server/api/auth/logout/: index.get.ts
twill-nuxt/server/api/auth/oauth/: index.get.ts
twill-nuxt/server/api/beta/: signup.post.ts
twill-nuxt/stores/: banner.ts  error.ts  user.ts
