[tool.poetry]
name = "twill-api"
version = "0.1.0"
description = ""
authors = ["Rami <rami.awar.ra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
aioredis = "^2.0.1"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tweepy = "^4.10.0"
sqlmodel = "^0.0.6"
psycopg2 = "^2.9.3"
structlog = "^22.1.0"
aiohttp = "^3.8.1"
async-lru = "^1.0.3"
oauthlib = "^3.2.0"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
