[tool.poetry]
name = "twill"
version = "0.1.0"
description = ""
authors = ["Rami <rami.awar.ra@gmail.com>"]

[tool.black]
line-length=120

[tool.poetry.dependencies]
python = "^3.10"
beanie = "^1.11.9"
pydantic = "^1.10.1"
tweepy = "^4.10.1"
aiohttp = "^3.8.1"
async-lru = "^1.0.3"
oauthlib = "^3.2.0"
tqdm = "^4.64.1"
structlog = "^22.1.0"
pymongo = {extras = ["srv"], version = "^4.2.0"}

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
